gccida/c3/get_cfa_from_loc_descr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_cfa_from_loc_descr/src/dwarf2out.c:3428:12: error: expected expression
*( _OWORD *)&cfa->offset = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_cfa_from_loc_descr/src/dwarf2out.c:3428:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa->offset = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_cfa_from_loc_descr/src/obj/dwarf2out.o] Error 1
